--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="nav-container">
 
       <div class="logo">
-        <a href="#"><h1>Fun Bus</h1></a>
+        <a href="#"><h1>Fun&nbsp;Bus</h1></a>
       </div>
   
       <div class="nav-links">
